eighth commit: Correction de la version mobile de la page logement ainsi que de la page about

--- a/my-kasa-app/src/App.css
+++ b/my-kasa-app/src/App.css
@@ -2,6 +2,7 @@
   width: 100%;
   margin: 0;
   padding: 0;
+  min-height: 100vh;
 }
 
 .page-container {
@@ -222,8 +223,8 @@ header nav a:hover {
    FOOTER
 ===================== */
 
-footer {
-  width: 100vw;              
+.footer {
+  width: 100%;            
   margin: 0 auto;        
   background-color: #000000;
   color: white;
@@ -334,7 +335,10 @@ footer {
 
   .footer p {
     font-size: 18px;
-  }
+    overflow-wrap: break-word;
+    align-items: center;
+    text-align: center;
+    width: 180px;
 }
 
 
@@ -392,3 +396,9 @@ footer {
     font-size: 14px;
   }
 }
+
+}
+
+
+
+
