--- a/my-kasa-app/src/index.css
+++ b/my-kasa-app/src/index.css
@@ -1,6 +1,10 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
+  min-height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 
 
   color-scheme: light dark;
@@ -29,12 +33,7 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-}
+
 
 h1 {
   font-size: 3.2em;
@@ -137,10 +136,6 @@ button:focus-visible {
 
 @media (max-width: 1024px) {
 
-  .about {
-    padding: 0 20px;
-  }
-
   .about-banner {
     height: 180px;
     border-radius: 20px;
@@ -158,7 +153,6 @@ button:focus-visible {
 
 @media (max-width: 768px) {
 
-  
   .collapse {
     padding-top: 5px;
     padding-bottom: 5px;
